--- a/src/app/styles/typography.scss
+++ b/src/app/styles/typography.scss
@@ -10,7 +10,7 @@
   }
 
   .heading-2 {
-    @apply text-2xl sm:text-3xl lg:text-4xl;
+    @apply text-2xl sm:text-3xl lg:text-4xl mb-6 sm:mb-8;
   }
 
   .heading-3 {
